fixed styling issue with watchlist on mobile devices

--- a/src/index.css
+++ b/src/index.css
@@ -145,6 +145,14 @@ body {
   width: 100%;
 }
 
+.movieList {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin: 0 auto;
+  padding: 0;
+}
+
 /* Profile */
 .profileDetailsHeader {
   align-items: center;
